[package]
edition = "2024"
name    = "sandbox"
version = "0.1.0"

[dependencies]
anyhow             = "1.0"
bit-set            = "0.10"
bitflags           = "2.13"
bytemuck           = { version = "1.25", features = ["derive"] }
clap               = { version = "4.6", features = ["derive"] }
disarm64           = "0.1"
fn-ptr             = "0.9"
leb128             = "0.2"
libc               = "0.2"
object             = "0.39"
page_size          = "0.6"
parking_lot        = "0.12"
paste              = "1.0"
pathsearch         = "0.2"
phf                = "0.13"
phf_macros         = "0.13"
shlex              = "2.0"
soft-canonicalize  = "0.5"
tracing            = "0.1"
tracing-core       = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
